Seguridad + JWT + RBAC complet - error 403 configurado